# scrapy-work

./: .gitignore  LICENSE  pyproject.toml  setup.py  spider
src/scrapy-work/: main.py
src/scrapy_work/: definition.py  main.py
